# PendulumRENKKL

./: .gitignore  main.py  pyproject.toml  requirements.txt
Data/: model.pt
Data/Experiment12/: epoch_data.csv  hyperparameters.npy  model_and_optimizer.pt
Data/Experiment4/: epoch_data.csv  hyperparameters.npy  model_and_optimizer.pt
Eval/: EvaluateModel.py
KKL/: KKL.py
ODESolver/: odesolvers.py
Pendulum/: pendulum.py
REN/: REN.py
Train/: BackwardTrraining.py  OnlineImproveMultipleTrajectories.py  OnlineTrainMultipleTrajectories.py  OnlineTrainMultipleTrajectoriesPlot.py  OnlineTraining.py  TrainRENKKLPendulum.py  model.pt
test/: test.py
