[project]
name = "fbonifac"
version = "0.1.0"
description = "Pour Jean"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gpustat>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scipy>=1.15.3",
    "sympy>=1.14.0",
    "torch>=2.9.1",
    "torchdiffeq>=0.2.5",
    "torchode>=1.0.0",
]
